# cpp-macro-test

./: CMakeLists.txt  main.cpp
libhoge/: CMakeLists.txt
libhoge/include/: libhoge.hpp
libhoge/src/: libhoge.cpp
